--- a/train_configs/test_canny_controlnet.yaml
+++ b/train_configs/test_canny_controlnet.yaml
@@ -1,12 +1,7 @@
 model_name: "flux-dev"
-data_config:
-  train_batch_size: 4
-  num_workers: 4
-  img_size: 512
-  img_dir: images/
 report_to: wandb
-train_batch_size: 3
-output_dir: saves_canny/
+train_batch_size: 5
+output_dir: saves_garment1/
 max_train_steps: 100000
 learning_rate: 2e-5
 lr_scheduler: constant
@@ -18,8 +13,20 @@ adam_epsilon: 1e-8
 max_grad_norm: 1.0
 logging_dir: logs
 mixed_precision: "bf16"
-checkpointing_steps: 2500
+checkpointing_steps: 1000
 checkpoints_total_limit: 10
 tracker_project_name: canny_training
 resume_from_checkpoint: latest
 gradient_accumulation_steps: 2
+dataroot: ./data/VITON-HD
+train_data_list: subtrain_20.txt
+height: 512
+width: 384
+train_verification_list: subtrain_0.txt
+validation_steps: 100
+validation_data_list: subtest_1.txt
+seed: 42
+num_inference_steps: 50
+guidance_scale: 4.0
+true_guidance_scale: 3.5
+timestep_to_start_cfg: 1
