--- a/train_configs/test_ipad.yaml
+++ b/train_configs/test_ipad.yaml
@@ -27,3 +27,5 @@ dataroot: ./data/VITON-HD
 train_data_list: subtrain_1.txt
 height: 512
 width: 384
+pretrained_model_name_or_path: "black-forest-labs/FLUX.1-dev"
+controlnet_pretrained_model_name_or_path: "alimama-creative/FLUX.1-dev-Controlnet-Inpainting-Alpha"
